--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -3,6 +3,7 @@
   height: 692px;
   background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
     url(../img/hero/vegetables-mob.jpg) no-repeat center bottom;
+  background-size: auto;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -10,30 +11,21 @@
 (min-resolution: 2dppx) {
   .hero {
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
-      url(../img/hero/vegetables-mob2x.jpg) no-repeat center bottom;
+      url(../img/hero/vegetables-mob2x.jpg) no-repeat center bottom/378px
   }
 }
 
 .hero-container {
   min-width: 300px;
-  min-height: 322px;
+  height: 322px;
+  padding: 0 20px;
   background-color: #576F35;
-}
-
-img {
-  background-position: center;
-  margin: 0 auto;
 }
 
 @media screen and (min-width: 375px) {
   .hero {
     width: 375px;
-    background-size: 375px;
     margin: 0 auto;
-  }
-
-  img {
-    width: 375px;
   }
 
   .hero-container {
@@ -73,6 +65,7 @@ h1 {
     height: 902px;
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
       url(../img/hero/vegetables-tab.jpg) no-repeat center bottom;
+    background-size: contain;
   }
 
   @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -81,27 +74,19 @@ h1 {
     .hero {
       background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
         url(../img/hero/vegetables-tab2x.jpg) no-repeat center bottom;
+      background-size: contain;
     }
   }
 
   .hero-container {
-    min-width: 704px;
+    max-width: 704px;
     margin: 0 auto;
-  }
-
-  h1 {
-    font-size: 76px;
-
   }
 
   .hero-title {
     margin-bottom: 25px;
     width: 704px;
     min-height: 228px;
-  }
-
-  p {
-    margin-bottom: 40px;
   }
 
   .hero-content {
@@ -117,26 +102,28 @@ h1 {
 @media screen and (min-width: 1280px) {
   .hero {
     width: 1280px;
-    height: 562px;
-    background: linear-gradient(to right, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
+    height: 800px;
+    background: linear-gradient(to right, rgba(20, 20, 20, 0.2) 0%,
+        rgba(20, 20, 20, 0.2) 100%),
       url(../img/hero/vegetables-desk.jpg) no-repeat right;
+    background-size: auto;
   }
 
   @media screen and (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
     .hero {
-      background: linear-gradient(to right, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
-        url(../img/hero/vegetables-desk2x.jpg) no-repeat right;
-      background-size: cover;
+      background: linear-gradient(to right, rgba(20, 20, 20, 0.2) 0%,
+          rgba(20, 20, 20, 0.2) 100%),
+        url(../img/hero/vegetables-desk2x.jpg) no-repeat right/650px;
     }
   }
 
   .hero-container {
-    width: 640px;
-    height: 562px;
+    max-width: 640px;
+    height: 800px;
     margin: 0;
-    padding: 0 28px 50px 100px;
+    padding: 238px 28px 50px 100px;
   }
 
   .hero-title {
