--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,6 +29,7 @@
       </svg>
     </button>
   </div>
+
   <div class="mob-menu">
     <div class="mob-menu-top">
       <button type="button" class="close-menu-btn">
@@ -49,7 +50,34 @@
           </li>
         </ul>
       </nav>
+
+      <button type="button" class="header-button">Shop now</button>
     </div>
-    <button type="button" class="header-button">Shop now</button>
+  </div>
+
+  <div class="modal-overlay">
+    <div class="tab-menu">
+      <div class="tab-menu-top">
+        <button type="button" class="close-menu-btn">
+          <svg class="close-icon" width="32" height="32">
+            <use href="../img/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="tab-menu-nav">
+          <ul class="tab-menu-list">
+            <li class="tab-menu-item">
+              <a class="tab-menu-link" href="">How It Works</a>
+            </li>
+            <li class="tab-menu-item">
+              <a class="tab-menu-link" href="">Vegetables</a>
+            </li>
+            <li class="tab-menu-item">
+              <a class="tab-menu-link" href="">Reviews</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <button type="button" class="header-button">Shop now</button>
+    </div>
   </div>
 </header>
