--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,16 +50,15 @@
           </li>
         </ul>
       </nav>
-
-      <button type="button" class="header-button">Shop now</button>
     </div>
+    <button type="button" class="header-button">Shop now</button>
   </div>
 
   <div class="modal-overlay">
     <div class="tab-menu">
       <div class="tab-menu-top">
-        <button type="button" class="close-menu-btn">
-          <svg class="close-icon" width="32" height="32">
+        <button type="button" class="close-tab-menu-btn">
+          <svg class="tab-close-icon" width="32" height="32">
             <use href="../img/icons.svg#icon-close"></use>
           </svg>
         </button>
