--- a/src/css/header.css
+++ b/src/css/header.css
@@ -235,7 +235,7 @@
     padding: 20px;
   }
 
-  .close-menu-btn {
+  .close-tab-menu-btn {
     display: block;
     margin-left: auto;
     margin-bottom: 240px;
@@ -243,7 +243,7 @@
     background-color: #7a3145;
   }
 
-  .close-icon {
+  .tab-close-icon {
     stroke: #fbfbfb;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -293,7 +293,7 @@
     display: none;
   }
 
-  .header {
+   .header {
     width: 100%;
     height: 186px;
     background-image: linear-gradient(to right, #576F35, #576F35 50%, transparent 50%),
