--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,13 +51,13 @@
         </ul>
       </nav>
     </div>
-    <button type="button" class="header-button">Shop now</button>
+    <button type="button" class="header-mob-button">Shop now</button>
   </div>
 
   <div class="modal-overlay">
     <div class="tab-menu">
       <div class="tab-menu-top">
-        <button type="button" class="close-tab-menu-btn">
+        <button type="button" class="close-tab-btn">
           <svg class="tab-close-icon" width="32" height="32">
             <use href="../img/icons.svg#icon-close"></use>
           </svg>
