--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
 }
 
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -33,7 +34,15 @@
   display: none;
 }
 
+.modal-overlay {
+  display: none;
+}
+
 .header-btn {
+  display: none;
+}
+
+.header-button {
   display: none;
 }
 
@@ -134,7 +143,7 @@
 }
 
 
-.header-button {
+.header-mob-button {
   display: block;
   min-width: 155px;
   height: 50px;
@@ -154,8 +163,8 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-button:hover,
-.header-button:focus {
+.header-mob-button:hover,
+.header-mob-button:focus {
   background-color: #fbfbfb;
   color: #7A3145;
 }
@@ -180,18 +189,6 @@
   .logo {
     width: 194px;
     height: 18px;
-  }
-
-  .header-button {
-    background-color: #fbfbfb;
-    color: #7A3145;
-    min-width: 157px;
-    height: 52px;
-  }
-
-  .header-button:hover,
-  .header-button:focus {
-    color: rgba(122, 49, 69, 0.7);
   }
 
   .open-menu-icons {
@@ -235,7 +232,7 @@
     padding: 20px;
   }
 
-  .close-tab-menu-btn {
+  .close-tab-btn {
     display: block;
     margin-left: auto;
     margin-bottom: 240px;
@@ -286,6 +283,18 @@
     text-align: center;
     color: #fbfbfb;
   }
+
+  .header-button {
+    background-color: #fbfbfb;
+    color: #7A3145;
+    min-width: 157px;
+    height: 52px;
+  }
+
+  .header-button:hover,
+  .header-button:focus {
+    color: rgba(122, 49, 69, 0.7);
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -293,7 +302,7 @@
     display: none;
   }
 
-   .header {
+  .header {
     width: 100%;
     height: 186px;
     background-image: linear-gradient(to right, #576F35, #576F35 50%, transparent 50%),
