--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,13 +12,13 @@
 
       <ul class="header-menu">
         <li class="header-link-how">
-          <a class="header-item" href="">How It Works</a>
+          <a class="header-item" href="how_it_works.html">How It Works</a>
         </li>
         <li class="header-link-veg">
-          <a class="header-item" href="">Vegetables</a>
+          <a class="header-item" href="vegetables.html">Vegetables</a>
         </li>
         <li class="header-link-rev">
-          <a class="header-item" href="">Reviews</a>
+          <a class="header-item" href="reviews.html">Reviews</a>
         </li>
       </ul>
     </nav>
