--- a/src/css/header.css
+++ b/src/css/header.css
@@ -79,9 +79,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  opacity: 0;
+  /* opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+  visibility: hidden; */
 }
 
 .mob-menu.is-open {
@@ -125,6 +125,7 @@
   width: 115px;
   height: 42px;
   align-content: center;
+  text-align: center;
 }
 
 .mob-menu-item:not(:last-child) {
@@ -267,6 +268,7 @@
     width: 115px;
     height: 42px;
     align-content: center;
+    text-align: center;
   }
 
   .tab-menu-item:not(:last-child) {
