--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
 .hero {
   width: 100%;
-  height: 692px;
+  height: 812px;
   background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
     url(../img/hero/vegetables-mob.jpg) no-repeat center bottom;
   background-size: auto;
@@ -17,9 +17,10 @@
 
 .hero-container {
   min-width: 300px;
-  height: 322px;
+  height: 442px;
   padding: 0 20px;
   background-color: #576F35;
+  text-align: left;
 }
 
 @media screen and (min-width: 375px) {
@@ -43,6 +44,8 @@ h1 {
   text-transform: uppercase;
   color: #FBFBFB;
   margin: 0 auto;
+  padding-top: 100px;
+  width: 335px;
 }
 
 .hero-title {
@@ -56,7 +59,6 @@ h1 {
   font-size: 14px;
   line-height: 129%;
   color: #FBFBFB;
-  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -78,11 +80,6 @@ h1 {
     }
   }
 
-  .hero-container {
-    max-width: 704px;
-    margin: 0 auto;
-  }
-
   .hero-title {
     margin-bottom: 25px;
     width: 704px;
@@ -98,6 +95,7 @@ h1 {
   }
 
 }
+
 
 @media screen and (min-width: 1280px) {
   .hero {
