--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,7 +32,7 @@
                     </ul>
                 </address>
             </div>
-            <div > 
+            <div class="footer-end-content"> 
                <p class="footer-end">Privacy Policy /Cookie settings</p> 
                <p class="footer-the-end"> ©Green Harvest 2023</p>
             </div>
