--- a/src/css/header.css
+++ b/src/css/header.css
@@ -79,9 +79,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* opacity: 0;
+  opacity: 0;
   pointer-events: none;
-  visibility: hidden; */
+  visibility: hidden;
 }
 
 .mob-menu.is-open {
@@ -222,7 +222,7 @@
   .tab-menu {
     position: absolute;
     top: 50%;
-    left: 60%;
+    left: 68%;
     background-color: #7A3145;
     width: 351px;
     height: 100%;
