--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,14 @@
 <header class="header">
   <div class="container header-container">
+    <a href="index.html" class="logo"
+      ><svg class="header-logo-left" width="16" height="16">
+        <use href="../img/icons.svg#icon-logo"></use>
+      </svg>
+      <svg class="header-logo-right" width="148" height="12">
+        <use href="../img/icons.svg#icon-logotext"></use>
+      </svg>
+    </a>
     <nav class="header-nav">
-      <a href="index.html" class="logo"
-        ><svg class="header-logo-left" width="16" height="16">
-          <use href="../img/icons.svg#icon-logo"></use>
-        </svg>
-        <svg class="header-logo-right" width="148" height="12">
-          <use href="../img/icons.svg#icon-logotext"></use>
-        </svg>
-      </a>
-
       <ul class="header-menu">
         <li class="header-link-how">
           <a class="header-item" href="how_it_works.html">How It Works</a>
@@ -21,8 +20,9 @@
           <a class="header-item" href="reviews.html">Reviews</a>
         </li>
       </ul>
+
+      <button class="header-btn" type="button">Shop now</button>
     </nav>
-    <button class="header-btn" type="button">Shop now</button>
     <button class="open-menu-btn" type="button">
       <svg class="open-menu-icons" width="32" height="32">
         <use href="../img/icons.svg#icon-menu"></use>
@@ -40,18 +40,19 @@
       <nav class="mob-menu-nav">
         <ul class="mob-menu-list">
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="">How It Works</a>
+            <a class="mob-menu-link" href="how_it_works.html">How It Works</a>
           </li>
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="">Vegetables</a>
+            <a class="mob-menu-link" href="vegetables.html">Vegetables</a>
           </li>
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="">Reviews</a>
+            <a class="mob-menu-link" href="reviews.html">Reviews</a>
           </li>
         </ul>
-      </nav>
+      
     </div>
     <button type="button" class="header-mob-button">Shop now</button>
+    </nav>
   </div>
 
   <div class="modal-overlay">
@@ -65,18 +66,18 @@
         <nav class="tab-menu-nav">
           <ul class="tab-menu-list">
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="">How It Works</a>
+              <a class="tab-menu-link" href="how_it_works.html">How It Works</a>
             </li>
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="">Vegetables</a>
+              <a class="tab-menu-link" href="vegetables.html">Vegetables</a>
             </li>
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="">Reviews</a>
+              <a class="tab-menu-link" href="reviews.html">Reviews</a>
             </li>
           </ul>
-        </nav>
       </div>
       <button type="button" class="header-button">Shop now</button>
     </div>
+    </nav>
   </div>
 </header>
