--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  width: 100%;
+  width: 375px;
   height: 812px;
   background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
     url(../img/hero/vegetables-mob.jpg) no-repeat center bottom;
@@ -10,6 +10,7 @@
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
   .hero {
+
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
       url(../img/hero/vegetables-mob2x.jpg) no-repeat center bottom/378px
   }
@@ -18,9 +19,12 @@
 .hero-container {
   min-width: 300px;
   height: 442px;
-  padding: 0 20px;
   background-color: #576F35;
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+
 }
 
 @media screen and (min-width: 375px) {
@@ -43,8 +47,6 @@ h1 {
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #FBFBFB;
-  margin: 0 auto;
-  padding-top: 100px;
   width: 335px;
 }
 
@@ -59,6 +61,7 @@ h1 {
   font-size: 14px;
   line-height: 129%;
   color: #FBFBFB;
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
