--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,32 +1,5 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-body {
-  font-family: 'Inter Tight', sans-serif;
-  color: #fbfbfb;
-}
-
 .reviews-section {
+  font-family: Inter Tight;
   padding: 80px 20px;
   background-color: #fbfbfb;
   margin: 0 auto;
@@ -36,7 +9,7 @@ body {
 }
 
 .reviews-title {
-  font-family: Inter Tight;
+  font-family: Inter Tight SemiBold;
   font-weight: 600;
   font-size: 48px;
   line-height: 104%;
@@ -51,7 +24,7 @@ body {
 }
 
 .reviews-text {
-  font-family: Inter Tight;
+  font-family: Inter Tight Medium;
   font-weight: 500;
   font-size: 14px;
   line-height: 129%;
@@ -88,6 +61,7 @@ body {
 }
 
 .review-description-title {
+  font-family: Inter Tight SemiBold;
   font-weight: 600;
   font-size: 16px;
   line-height: 125%;
@@ -98,12 +72,15 @@ body {
 }
 
 .review-description-text {
-  font-weight: 500;
+  font-family: Inter Tight Medium;
   font-size: 14px;
   line-height: 129%;
+  letter-spacing: -0.02em;
   text-align: center;
   color: rgba(4, 3, 6, 0.4);
   padding-top: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 /* media */
@@ -141,6 +118,8 @@ body {
     font-size: 16px;
     line-height: 140%;
     color: rgba(20, 20, 20, 0.4);
+    padding-left: 7px;
+    padding-right: 7px;
   }
   .reviews-container {
     display: flex;
