--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -13,8 +13,11 @@
       <div class="reviews reviews-phone">
         <img
           class="reviews-img"
-          srcset="../img/john-wax.jpg 1x, ../img/john-wax-2x.jpg 2x"
-          src="../img/john-wax.jpg"
+          srcset="
+            ../img/reviews/john-wax.jpg    1x,
+            ../img/reviews/john-wax-2x.jpg 2x
+          "
+          src="../img/reviews/john-wax.jpg"
           alt="John Wax"
         />
         <div class="review-description">
@@ -32,10 +35,10 @@
         <img
           class="reviews-img"
           srcset="
-            ../img/victoria-romashenko.jpg    1x,
-            ../img/victoria-romashenko-2x.jpg 2x
+            ../img/reviews/victoria-romashenko.jpg    1x,
+            ../img/reviews/victoria-romashenko-2x.jpg 2x
           "
-          src="../img/victoria-romashenko.jpg"
+          src="../img/reviews/victoria-romashenko.jpg"
           alt="Victoria Romashenko"
         />
         <div class="review-description">
@@ -52,8 +55,11 @@
       <div class="reviews reviews-pc">
         <img
           class="reviews-img"
-          srcset="../img/ihor-trachuk.jpg 1x, ../img/ihor-trachuk-2x.jpg 2x"
-          src="../img/ihor-trachuk.jpg"
+          srcset="
+            ../img/reviews/ihor-trachuk.jpg    1x,
+            ../img/reviews/ihor-trachuk-2x.jpg 2x
+          "
+          src="../img/reviews/ihor-trachuk.jpg"
           alt="Ihor Trachuk"
         />
         <div class="review-description">
