--- a/src/css/common-styles.css
+++ b/src/css/common-styles.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   min-width: 320px;
-  padding: 80px 20px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 
@@ -31,12 +31,10 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 100px 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
-    padding: 100px 100px;
   }
 }
