--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             
-            <div>
+            <div class="footer-address-menu">
                 <address class="footer-address">
                     <ul class="footer-address-list">
                         <li> <a href="tel:+380684439426" class="footer-adress-link">+380 (68) 443-94-26</a></li>
@@ -33,8 +33,8 @@
                 </address>
             </div>
             <div class="footer-end-content"> 
-               <p class="footer-end">Privacy Policy /Cookie settings</p> 
-               <p class="footer-the-end"> ©Green Harvest 2023</p>
+               <p class="footer-end">Privacy Policy / Cookie settings </p> 
+               <p class="footer-the-end">©Green Harvest 2023</p>
             </div>
         </div>
     </footer>
