--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -70,8 +70,7 @@
 
 @media screen and (min-width: 768px) {
     .vegetables {
-        padding-top: 100px;
-        padding-bottom: 100px;
+        padding: 100px 12px;
     }
     .vegetables-title {
         font-size: 64px;
@@ -95,16 +94,26 @@
         padding: 32px 30px;
         width: calc((100% - 20px) / 2);
     }
+    .vegetables-price {
+        margin-bottom: 10px;
+    }
     .vegetables-name {
         font-size: 32px;
     }
 }
 @media screen and (min-width: 1280px) {
+    .vegetables {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
     .vegetables-title {
         margin-bottom: 25px;
         }
+    .vegetables-list {
+        column-gap: 21px;
+    }
     .vegetables-item {
         padding: 32px;
-        width: calc((100% - 40px) / 3);
+        width: calc((100% - 42px) / 3);
     }
 }
