--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,11 +2,11 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-navigation"> 
-            <button type="button" class="footer-button">
+            <a class="footer-button" href="./index.html">
                 <svg width="16" height="16">
                 <use href="../img/icons.svg#icon-vector-1"></use>
                 </svg>
-            </button>  
+            </a>  
                 <a class="footer-logo" href="./index.html">
                 <svg width="148" height="16">
                 <use href="../img/icons.svg#icon-Frame-96"></use>
@@ -17,9 +17,9 @@
             </div>
             <div class="footer-menu-content"> 
                 <ul class="footer-menu">
-                    <li> <p class="footer-menu-intem">how it works </p></li>
-                    <li> <p class="footer-menu-intem">vegetables </p> </li>
-                    <li> <p class="footer-menu-intem">reviews </p></li>
+                    <li> <a class="footer-menu-intem" href=" ">how it works </a></li>
+                    <li> <a class="footer-menu-intem" href="">vegetables </a> </li>
+                    <li> <a class="footer-menu-intem" href="">reviews </a></li>
                 </ul>
             </div>
             
