--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,12 +4,12 @@
             <div class="footer-navigation"> 
             <a class="footer-button" href="./index.html">
                 <svg width="16" height="16">
-                <use href="../img/icons.svg#icon-vector-1"></use>
+                <use href="./img/icons.svg#icon-vector-1"></use>
                 </svg>
             </a>  
                 <a class="footer-logo" href="./index.html">
                 <svg width="148" height="16">
-                <use href="../img/icons.svg#icon-Frame-96"></use>
+                <use href="./img/icons.svg#icon-Frame-96"></use>
                 </svg>
                 </a>
                 <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect
@@ -17,9 +17,9 @@
             </div>
             <div class="footer-menu-content"> 
                 <ul class="footer-menu">
-                    <li> <a class="footer-menu-intem" href=" ">how it works </a></li>
-                    <li> <a class="footer-menu-intem" href="">vegetables </a> </li>
-                    <li> <a class="footer-menu-intem" href="">reviews </a></li>
+                    <li> <a class="footer-menu-item" href=" ">how it works </a></li>
+                    <li> <a class="footer-menu-item" href="">vegetables </a> </li>
+                    <li> <a class="footer-menu-item" href="">reviews </a></li>
                 </ul>
             </div>
             
