how-it-work 1.7

--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -32,12 +32,12 @@
     </picture>
   </div>
   <div class="description-how-it">
-    <p class="tittle-how-it-works">
+    <h1 class="tittle-how-it-works">
       TO ORDER YOUR
       <span class="span-tittle-how-it">VEGETABLE</span> BASKET, SIMPLY FOLLOW
       THESE
       <span class="span-tittle-how-it">EASY STEPS</span>
-    </p>
+    </h1>
     <p class="paragraph-how-it-works">
       Our baskets are assembled with care and delivered straight to your
       doorstep, so you can enjoy the taste of fresh fruit without ever leaving
