--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,13 +15,14 @@
                 <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect
                     choice.</p>
             </div>
-            <div class="footer-menu-content"> 
+            <div class="footer-menu-content">
                 <ul class="footer-menu">
-                    <li> <a class="footer-menu-item" href=" ">how it works </a></li>
-                    <li> <a class="footer-menu-item" href="">vegetables </a> </li>
-                    <li> <a class="footer-menu-item" href="">reviews </a></li>
+                    <li> <a class="footer-menu-item" href="how_it_works.html">how it works</a></li>
+                    <li> <a class="footer-menu-item" href="vegetables.html">vegetables</a> </li>
+                    <li> <a class="footer-menu-item" href="reviews.html">reviews</a></li>
                 </ul>
             </div>
+
             
             <div class="footer-address-menu">
                 <address class="footer-address">
