--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,10 @@
   <div class="container header-container">
     <a href="index.html" class="logo"
       ><svg class="header-logo-left" width="16" height="16">
-        <use href="https://nataliyagarbar.github.io/healthy-groceries-project/img/icons.svg#icon-logo"></use>
+        <use href="./img/icons.svg#icon-logo"></use>
       </svg>
       <svg class="header-logo-right" width="148" height="12">
-        <use href="https://nataliyagarbar.github.io/healthy-groceries-project/img/icons.svg#icon-logotext"></use>
+        <use href="./img/icons.svg#icon-logotext"></use>
       </svg>
     </a>
     <nav class="header-nav">
@@ -25,7 +25,7 @@
     </nav>
     <button class="open-menu-btn" type="button">
       <svg class="open-menu-icons" width="32" height="32">
-        <use href="https://nataliyagarbar.github.io/healthy-groceries-project/img/icons.svg#icon-menu"></use>
+        <use href="./img/icons.svg#icon-menu"></use>
       </svg>
     </button>
   </div>
@@ -34,7 +34,7 @@
     <div class="mob-menu-top">
       <button type="button" class="close-menu-btn">
         <svg class="close-icon" width="32" height="32">
-          <use href="https://nataliyagarbar.github.io/healthy-groceries-project/img/icons.svg#icon-close"></use>
+          <use href="./img/icons.svg#icon-close"></use>
         </svg>
       </button>
       <nav class="mob-menu-nav">
