how-it-works1.7

--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,4 +1,5 @@
 <section class="cont-how-it-works container">
+  <h2 class="hidden-how-it-works">How It Works</h2>
   <div class="how-it-works">
     <picture>
       <source
