--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,13 +12,12 @@
   .hero {
 
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
-      url(../img/hero/vegetables-mob2x.jpg) no-repeat center bottom/378px
+      url(../img/hero/vegetables-mob2x.jpg) no-repeat center bottom/476px;
   }
 }
 
 .hero-container {
   min-width: 300px;
-  height: 442px;
   background-color: #576F35;
   display: flex;
   flex-direction: column;
