--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -15,10 +15,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/eggplant@1x.png 1x,
-            ./img/vegetables/eggplant@2x.png 2x
+            ./img/vegetables/eggplant@1x.webp 1x,
+            ./img/vegetables/eggplant@2x.webp 2x
           "
-          src="./img/vegetables/eggplant@1x.png"
+          src="./img/vegetables/eggplant@1x.webp"
           alt="eggplant"
           width="282"
           height="243"
@@ -30,10 +30,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/leak@1x.png 1x,
-            ./img/vegetables/leak@2x.png 2x
+            ./img/vegetables/leak@1x.webp 1x,
+            ./img/vegetables/leak@2x.webp 2x
           "
-          src="./img/vegetables/leak@1x.png"
+          src="./img/vegetables/leak@1x.webp"
           alt="leek"
           width="282"
           height="243"
@@ -45,10 +45,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/mushrooms@1x.png 1x,
-            ./img/vegetables/mushrooms@2x.png 2x
+            ./img/vegetables/mushrooms@1x.webp 1x,
+            ./img/vegetables/mushrooms@2x.webp 2x
           "
-          src="./img/vegetables/mushrooms@1x.png"
+          src="./img/vegetables/mushrooms@1x.webp"
           alt="mushrooms"
           width="282"
           height="243"
@@ -60,10 +60,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/corn@1x.png 1x,
-            ./img/vegetables/corn@2x.png 2x
+            ./img/vegetables/corn@1x.webp 1x,
+            ./img/vegetables/corn@2x.webp 2x
           "
-          src="./img/vegetables/corn@1x.png"
+          src="./img/vegetables/corn@1x.webp"
           alt="corn"
           width="282"
           height="243"
@@ -75,10 +75,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/potato@1x.png 1x,
-            ./img/vegetables/potato@2x.png 2x
+            ./img/vegetables/potato@1x.webp 1x,
+            ./img/vegetables/potato@2x.webp 2x
           "
-          src="./img/vegetables/potato@1x.png"
+          src="./img/vegetables/potato@1x.webp"
           alt="sweet potatoes"
           width="282"
           height="243"
@@ -90,10 +90,10 @@
         <img
           class="vegetables-pic"
           srcset="
-            ./img/vegetables/carrot@1x.png 1x,
-            ./img/vegetables/carrot@2x.png 2x
+            ./img/vegetables/carrot@1x.webp 1x,
+            ./img/vegetables/carrot@2x.webp 2x
           "
-          src="./img/vegetables/carrot@1x.png"
+          src="./img/vegetables/carrot@1x.webp"
           alt="carrot"
           width="282"
           height="243"
