--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 
-    <footer class="footer">
+    <footer class="footer container">
         <div class="footer-container">
             <div class="footer-navigation"> 
             <a class="footer-button" href="./index.html">
@@ -21,10 +21,8 @@
                     <li> <a class="footer-menu-item" href="vegetables.html">vegetables</a> </li>
                     <li> <a class="footer-menu-item" href="reviews.html">reviews</a></li>
                 </ul>
-            </div>
-
             
-            <div class="footer-address-menu">
+            <!-- <div class="footer-address-menu"> -->
                 <address class="footer-address">
                     <ul class="footer-address-list">
                         <li> <a href="tel:+380684439426" class="footer-adress-link">+380 (68) 443-94-26</a></li>
@@ -34,7 +32,7 @@
                 </address>
             </div>
             <div class="footer-end-content"> 
-               <p class="footer-end">Privacy Policy / Cookie settings </p> 
+               <p class="footer-end">Privacy Policy <span class="footer-span">/</span> Cookie settings</p> 
                <p class="footer-the-end">©Green Harvest 2023</p>
             </div>
         </div>
