--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -115,7 +115,7 @@ h1 {
   }
 
   .hero-container {
-    max-width: 640px;
+    width: 640px;
     height: 800px;
     margin: 0;
     padding: 238px 28px 0 100px;
