how-it-works 1.8
Изменил фото, добавил счетчики, добавил скрытый заголовок

--- a/src/css/how-it-works.css
+++ b/src/css/how-it-works.css
@@ -71,6 +71,45 @@
    
 }
 
+
+
+
+/* СЧЕТЧИК ВАР 1 */
+
+
+
+
+.list-how-it-works {
+    counter-reset: my-awesome-counter;
+
+}
+
+.list-how-it-works>li {
+    counter-increment: my-awesome-counter;
+    margin-bottom: 10px;
+}
+
+.custom-counter>li::before {
+    content: counter(my-awesome-counter) ". ";
+    font-weight: bold;
+}
+
+/* СЧЕТЧИК ВАР 2 */
+
+.list-how-it-works {
+    counter-reset: section;
+    list-style-type: none;
+}
+
+.list-text-how-it::before {
+        counter-increment: section;
+        content: counters(section, ".") " "
+    }
+
+
+
+
+
 .list-how-it-works {
     display: flex;
     flex-direction: column;
@@ -351,4 +390,6 @@
         margin-top: 0;
     }
 }
+
+
 
