--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -4,28 +4,28 @@
     <picture>
       <source
         srcset="
-          ../img/img-how-it/how-it-descktop.jpg    1x,
-          ../img/img-how-it/how-it-descktop-x2.jpg 2x
+          ./img/how-it-works/how-it-descktop.jpg    1x,
+          ./img/how-it-works/how-it-descktop-x2.jpg 2x
         "
         media="(min-width: 1280px)"
       />
       <source
         srcset="
-          ../img/img-how-it/how-it-tablet.jpg    1x,
-          ../img/img-how-it/how-it-tablet-x2.jpg 2x
+          ./img/how-it-works/how-it-tablet.jpg    1x,
+          ./img/how-it-works/how-it-tablet-x2.jpg 2x
         "
         media="(min-width: 768px)"
       />
       <source
         srcset="
-          ../img/img-how-it/how-it-mobile.jpg    1x,
-          ../img/img-how-it/how-it-mobile-x2.jpg 2x
+          ./img/how-it-works/how-it-mobile.jpg    1x,
+          ./img/how-it-works/how-it-mobile-x2.jpg 2x
         "
         media="(max-width: 767px)"
       />
       <img
         class="photo-how-it-works"
-        src="../img/img-how-it/how-it-work-photo.jpg"
+        src="./img/img-how-it/how-it-work-photo.jpg"
         width="335"
         height="450"
         alt="how-it-works"
