--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -184,7 +184,7 @@
 
 
 @media screen and (min-width: 1280px) {
-    .footer .footer-container {
-    max-width: 1158px;
+    .footer-container {
+
     }
 }
