--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,9 +17,9 @@
             </div>
             <div class="footer-menu-content">
                 <ul class="footer-menu">
-                    <li> <a class="footer-menu-item" href="how_it_works.html">how it works</a></li>
-                    <li> <a class="footer-menu-item" href="vegetables.html">vegetables</a> </li>
-                    <li> <a class="footer-menu-item" href="reviews.html">reviews</a></li>
+                    <li> <a class="footer-menu-item" href="#how_it_works.html">how it works</a></li>
+                    <li> <a class="footer-menu-item" href="#vegetables.html">vegetables</a> </li>
+                    <li> <a class="footer-menu-item" href="#reviews.html">reviews</a></li>
                 </ul>
             
             <!-- <div class="footer-address-menu"> -->
@@ -31,9 +31,9 @@
                     </ul>
                 </address>
             </div>
-            <div class="footer-end-content"> 
-               <p class="footer-end">Privacy Policy <span class="footer-span">/</span> Cookie settings</p> 
-               <p class="footer-the-end">©Green Harvest 2023</p>
+            <div class="footer-end-content">
+                <p class="footer-end">Privacy Policy <span class="footer-span">/</span> Cookie settings</p>
+                <p class="footer-the-end">&copy; Green Harvest 2023</p>
             </div>
         </div>
     </footer>
