--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -10,7 +10,7 @@
 (min-resolution: 2dppx) {
   .hero {
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
-      url(/img/hero/vegetables-mob2x.jpg) no-repeat center bottom/476px;
+      url(/img/hero/vegetables-mob2x.jpg) no-repeat center bottom/430px;
 
     background-color: #576F35;
 
@@ -108,7 +108,7 @@ h1 {
     min-height: 800px;
     background: linear-gradient(to right, rgba(20, 20, 20, 0.2) 0%,
         rgba(20, 20, 20, 0.2) 100%),
-      url(/img/hero/vegetables-desk.jpg) no-repeat top right;
+      url(/img/hero/vegetables-desk.jpg) no-repeat top right/650px;
   }
 
   @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -122,7 +122,7 @@ h1 {
   }
 
   .hero-container {
-    width: 640px;
+    width: 630px;
     height: 800px;
     margin: 0;
     padding: 238px 28px 0 100px;
