--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -12,11 +12,8 @@
     <li class="reviews reviews-phone">
       <img
         class="reviews-img"
-        srcset="
-          /src/img/reviews/john-wax.jpg    1x,
-          /src/img/reviews/john-wax-2x.jpg 2x
-        "
-        src="/src/img/reviews/john-wax.jpg"
+        srcset="./img/reviews/john-wax.jpg 1x, ./img/reviews/john-wax-2x.jpg 2x"
+        src="./src/img/reviews/john-wax.jpg"
         alt="John Wax"
       />
       <h3 class="review-description-title">John Wax</h3>
@@ -30,10 +27,10 @@
       <img
         class="reviews-img"
         srcset="
-          /src/img/reviews/victoria-romashenko.jpg    1x,
-          /src/img/reviews/victoria-romashenko-2x.jpg 2x
+          ./src/img/reviews/victoria-romashenko.jpg    1x,
+          ./src/img/reviews/victoria-romashenko-2x.jpg 2x
         "
-        src="/src/img/reviews/victoria-romashenko.jpg"
+        src="./src/img/reviews/victoria-romashenko.jpg"
         alt="Victoria Romashenko"
       />
       <h3 class="review-description-title">Victoria Romashenko</h3>
@@ -47,10 +44,10 @@
       <img
         class="reviews-img"
         srcset="
-          /src/img/reviews/ihor-trachuk.jpg    1x,
-          /src/img/reviews/ihor-trachuk-2x.jpg 2x
+          ./src/img/reviews/ihor-trachuk.jpg    1x,
+          ./src/img/reviews/ihor-trachuk-2x.jpg 2x
         "
-        src="/src/img/reviews/ihor-trachuk.jpg"
+        src="./src/img/reviews/ihor-trachuk.jpg"
         alt="Ihor Trachuk"
       />
       <h3 class="review-description-title">Ihor Trachuk</h3>
