--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,12 +4,12 @@
             <div class="footer-navigation"> 
             <a class="footer-button" href="./index.html">
                 <svg width="16" height="16">
-                <use href="./img/icons.svg#"></use>
+                <use href="./img/icons.svg#icon-vector-1"></use>
                 </svg>
             </a>  
                 <a class="footer-logo" href="./index.html">
                 <svg width="148" height="16">
-                <use href="./img/icons.svg#"></use>
+                <use href="./img/icons.svg#icon-Frame-96"></use>
                 </svg>
                 </a>
                 <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect
@@ -31,9 +31,9 @@
                     </ul>
                 </address>
             </div>
-            <div class="footer-end-content">
-                <p class="footer-end">Privacy Policy <span class="footer-span">/</span> Cookie settings</p>
-                <p class="footer-the-end">&copy; Green Harvest 2023</p>
+            <div class="footer-end-content"> 
+               <p class="footer-end">Privacy Policy <span class="footer-span">/</span> Cookie settings</p> 
+               <p class="footer-the-end">&copy;Green Harvest 2023</p>
             </div>
         </div>
     </footer>
