--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews-section container">
+<section class="reviews-section container" id="reviews.html">
   <div class="reviews-top">
     <h2 class="reviews-title">
       reviews from our <span class="reviews-title-part">customers</span>
