--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container header-container">
-    <a href="index.html" class="logo"
+    <a href="#index.html" class="logo"
       ><svg class="header-logo-left" width="16" height="16">
         <use href="./img/icons.svg#icon-logo"></use>
       </svg>
@@ -11,13 +11,13 @@
     <nav class="header-nav">
       <ul class="header-menu">
         <li class="header-link-how">
-          <a class="header-item" href="how_it_works.html">How It Works</a>
+          <a class="header-item" href="#how_it_works.html">How It Works</a>
         </li>
         <li class="header-link-veg">
-          <a class="header-item" href="vegetables.html">Vegetables</a>
+          <a class="header-item" href="#vegetables.html">Vegetables</a>
         </li>
         <li class="header-link-rev">
-          <a class="header-item" href="reviews.html">Reviews</a>
+          <a class="header-item" href="#reviews.html">Reviews</a>
         </li>
       </ul>
 
@@ -40,13 +40,13 @@
       <nav class="mob-menu-nav">
         <ul class="mob-menu-list">
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="how_it_works.html">How It Works</a>
+            <a class="mob-menu-link" href="#how_it_works.html">How It Works</a>
           </li>
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="vegetables.html">Vegetables</a>
+            <a class="mob-menu-link" href="#vegetables.html">Vegetables</a>
           </li>
           <li class="mob-menu-item">
-            <a class="mob-menu-link" href="reviews.html">Reviews</a>
+            <a class="mob-menu-link" href="#reviews.html">Reviews</a>
           </li>
         </ul>
       
@@ -66,13 +66,13 @@
         <nav class="tab-menu-nav">
           <ul class="tab-menu-list">
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="how_it_works.html">How It Works</a>
+              <a class="tab-menu-link" href="#how_it_works.html">How It Works</a>
             </li>
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="vegetables.html">Vegetables</a>
+              <a class="tab-menu-link" href="#vegetables.html">Vegetables</a>
             </li>
             <li class="tab-menu-item">
-              <a class="tab-menu-link" href="reviews.html">Reviews</a>
+              <a class="tab-menu-link" href="#reviews.html">Reviews</a>
             </li>
           </ul>
       </div>
