--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,12 +4,12 @@
             <div class="footer-navigation"> 
             <a class="footer-button" href="./index.html">
                 <svg width="16" height="16">
-                <use href="./img/icons.svg#icon-vector-1"></use>
+                <use href="./img/icons.svg#icon-logo"></use>
                 </svg>
             </a>  
                 <a class="footer-logo" href="./index.html">
                 <svg width="148" height="16">
-                <use href="./img/icons.svg#icon-Frame-96"></use>
+                <use href="./img/icons.svg#icon-logotext"></use>
                 </svg>
                 </a>
                 <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect
