--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -116,15 +116,22 @@
 
 @media screen and (min-width: 768px) {
  
+
  .footer .footer-container {
     flex-direction: row;
     gap: 64px;
     flex-wrap: wrap;
-    padding: 32px;
     max-width: 768px;
     justify-content: space-between;
-    align-items: center;
 } 
+
+.footer{
+    padding: 0 32px;
+}
+
+.footer-container{
+
+}
 
 .footer-text{
     font-size: 16px;
@@ -184,22 +191,17 @@
 
 @media screen and (min-width: 1280px) {
 .footer .footer-container{
-    display: flex;
-    align-items: baseline;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 50px 100px;
-     margin: 0 auto;
-     gap: 0
+   
     }
 
-    
+    .footer{
+        padding: 50px 100px;
+    }
+
 .footer-navigation {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-right: 120px;
+    
 }
+
 
 }
 
