--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 
-    <footer class="footer container">
-        <div class="footer-container">
+    <footer class="footer">
+        <div class="footer-container container">
             <div class="footer-navigation"> 
             <a class="footer-button" href="./index.html">
                 <svg width="16" height="16">
