--- a/src/css/discount.css
+++ b/src/css/discount.css
@@ -1,25 +1,48 @@
 .discount{
-    width: 335px;
-    height: 306px;
+   
     box-sizing: border-box;
 
 }
-
-.discount-text{
-    text-transform: uppercase;
+.discount-visually-hidden {
+    position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+}
+.discount-contener{
+text-transform: uppercase;
     padding-left: 83px;
     padding-top: 20px;
     padding-bottom: 80px;
     padding-right: 20px;
-    width: 335px;
-    height: 306px;
+}
+
+.discount-text{
+   
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 104%;
+        letter-spacing: -0.01em;
+        text-transform: uppercase;
+    color: #141414;
 }
 .discount-text-green{
     background-color: #576f35;
     border-radius: 12px;
-        width: 355px;
-        height: 102px;
-        color:  #fbfbfb
+        color:  #fbfbfb;
+        font-weight: 600;
+            font-size: 48px;
+            line-height: 104%;
+            letter-spacing: -0.01em;
+            text-transform: uppercase;
+        display: block;
+        
 }
 
 @media screen and (min-width: 320px) {
@@ -28,39 +51,46 @@
     }
 }
 @media screen and (min-width: 375px) {
-    .discount {
-        width: 375px;
-        height: 469px;
-    }
+    
 }
 @media screen and (min-width: 768px) {
-    .discount {
-        width: 768px;
-        height: 488px;
-       
-    }
-    .discount-text{
-        padding-left: 32px;
+    .discount-contener {
+            padding-left: 32px;
             padding-top: 108px;
             padding-right: 32px;
             padding-bottom: 100px;
-            width: 704px;
-            height: 280px;
-
+    
+    
+        }
+    .discount-text {
+    font-size: 64px;
+        line-height: 109%
+       
     }
+    .discount-text-green{
+        font-size: 64px;
+            line-height: 109%
+    }
+   
 }
-@media screen and (min-width: 1158px) {
-    .discount {
-        width: 1158px;
-        height: 440px;
-        
-    }
-    .discount-text{
+@media screen and (min-width: 1280px) {
+    
+    .discount-contener{
         padding-left: 113px;
             padding-top: 100px;
             padding-right: 113px;
             padding-bottom: 100px;
-            width: 1054px;
-            height: 240px;
+            display: none;
+            
+    }
+    .discount-text{
+        font-size: 76px;
+            line-height: 105%;
+
+    }
+    .discount-text-green{
+        font-size: 76px;
+            line-height: 105%;
+
     }
 }
