--- a/src/partials/discount.html
+++ b/src/partials/discount.html
@@ -1,6 +1,6 @@
 <section class=" discount">
-    <div class="contener discount-contener">
-    <h2 class="discount-visually-hidden">Discount up to 40%!</h2>
+    <div class="discount-container container">
+    <h2 class="discount-title visually-hidden">Discount up to 40%!</h2>
      <p class="discount-text"><span class="discount-text-green">Discount up to 40%!</span> Taste the vitamins and keep
             your health</p>
             </div>
