--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,4 +1,4 @@
-<section class="vegetables" id="vegetables">
+<section class="vegetables" id="vegetables.html">
   <div class="container">
     <h2 class="vegetables-title">
       organic <span class="vegetables-title-accent">vegetables</span>
