how-it-works1.9

--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,4 +1,4 @@
-<section class="cont-how-it-works container">
+<section class="cont-how-it-works container" id="how_it_works.html">
   <h2 class="hidden-how-it-works">How It Works</h2>
   <div class="how-it-works">
     <picture>
