--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -94,6 +94,7 @@
     flex-direction: row;
 }
 .footer-end{ 
+    margin-right: 43px;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px; 
@@ -130,6 +131,7 @@
 }
 
 .footer-container{
+    padding: 40px 0;
 
 }
 
@@ -170,6 +172,7 @@
 }
 
 .footer-end{
+    
     font-size: 18px;
     line-height: 20px;
     margin-top: 100px;
@@ -182,26 +185,31 @@
    font-size: 18px;
     line-height: 20px; 
     line-height: 1.1;
-    opacity: 0.1;
-    
 }
 
 }
 
 
 @media screen and (min-width: 1280px) {
-.footer .footer-container{
-   
-    }
 
     .footer{
         padding: 50px 100px;
     }
 
+    .footer-container{
+         max-width: 1280px;
+      padding-left: 100px;
+                padding-right: 100px;
+    }
+
+    .footer-menu-content{
+        display: flex;
+        flex-direction: row;
+        gap: 121px;
+    }
 .footer-navigation {
     
 }
-
 
 }
 
