--- a/src/css/discount.css
+++ b/src/css/discount.css
@@ -1,6 +1,6 @@
 .discount{
 
-    padding-top: 20px;
+    padding-top: 83x;
     padding-bottom: 80px;
     box-sizing: border-box;
 
@@ -48,7 +48,7 @@
     .discount{
         padding-top: 100px;
             padding-bottom: 100px;
-            display: none;
+            
             
     }
     .discount-text{
