--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,5 +1,5 @@
 <section class="vegetables" id="vegetables.html">
-  <div class="container">
+  <div class="container vegetables-container">
     <h2 class="vegetables-title">
       organic <span class="vegetables-title-accent">vegetables</span>
     </h2>
