--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -3,11 +3,11 @@
   background-color: #fbfbfb;
   margin: 0 auto;
 }
-.reviews-top {
+.reviews-section .reviews-top {
   margin-bottom: 40px;
 }
 
-.reviews-title {
+.reviews-top .reviews-title {
   font-weight: 600;
   font-size: 48px;
   line-height: 104%;
@@ -17,24 +17,21 @@
   padding-bottom: 20px;
 }
 
-.reviews-title-part {
+.reviews-title .reviews-title-part {
   color: #576f35;
 }
 
-.reviews-text {
+.reviews-top .reviews-text {
   font-weight: 500;
   font-size: 14px;
   line-height: 129%;
   color: #141414;
 }
 
-.reviews {
+.reviews-container .reviews {
   opacity: 0;
   visibility: hidden;
   display: none;
-}
-
-.reviews {
   border: 1px solid rgba(122, 49, 69, 0.3);
   border-radius: 24px;
   width: 335px;
@@ -45,20 +42,20 @@
   padding-bottom: 38px;
 }
 
-.reviews-phone {
+.reviews-container .reviews-phone {
   display: block;
   opacity: 1;
   visibility: visible;
 }
 
-.reviews-img {
+.reviews .reviews-img {
   border-radius: 100px;
-  width: 56px;
-  height: 56px;
+  min-width: 56px;
+  min-height: 56px;
   margin: 0 auto;
 }
 
-.review-description-title {
+.reviews .review-description-title {
   font-weight: 600;
   font-size: 16px;
   line-height: 125%;
@@ -68,7 +65,7 @@
   margin-top: 24px;
 }
 
-.review-description-text {
+.reviews .review-description-text {
   font-weight: 500;
   font-size: 14px;
   line-height: 129%;
@@ -93,44 +90,44 @@
     max-width: 768px;
     padding: 100px 32px;
   }
-  .reviews-top {
+  .reviews-section .reviews-top {
     width: 553px;
     min-height: 193px;
   }
-  .reviews-title {
+  .reviews-top .reviews-title {
     font-size: 64px;
     line-height: 100%;
   }
-  .reviews-text {
+  .reviews-top .reviews-text {
     font-size: 16px;
     line-height: 125%;
   }
 
-  .reviews-tablet {
+  .reviews-container .reviews-tablet {
     display: block;
     visibility: visible;
     opacity: 1;
   }
 
-  .reviews-container {
+  .reviews-section .reviews-container {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 18px;
   }
 
-  .reviews {
+  .reviews-container .reviews {
     width: calc((100% - 18px) / 2);
     min-height: 258px;
     padding: 20px;
   }
 
-  .review-description-title {
+  .reviews .review-description-title {
     font-size: 18px;
     line-height: 110%;
     color: #141414;
   }
-  .review-description-text {
+  .reviews .review-description-text {
     font-size: 16px;
     line-height: 140%;
     color: rgba(20, 20, 20, 0.4);
@@ -140,20 +137,19 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-  .reviews-container {
+  .reviews-section .reviews-container {
     gap: 25px;
   }
 
   .reviews-section {
     padding: 100px 100px;
+    max-width: 1280px;
+    display: block;
   }
-  .reviews {
+  .reviews-container .reviews {
     width: calc((100% - 25px) / 3);
   }
-  .reviews-pc {
+  .reviews-container .reviews-pc {
     display: block;
     visibility: visible;
     opacity: 1;
