how-it-works2.0

--- a/src/css/how-it-works.css
+++ b/src/css/how-it-works.css
@@ -353,6 +353,9 @@
     .container {
         /* max-width: 1280px;
         padding: 0 0; */
+       
+    }
+    .cont-how-it-works{
         display: flex;
     }
     .photo-how-it-works {
