--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -22,9 +22,8 @@
   background-color: #576F35;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 48px 20px 40px;
+  align-items: flex-start;
+  padding: 100px 20px 40px;
 
 }
 
